  "python3" under Unix, not "python".

- Issue #15033: Fix the exit status bug when modules invoked using -m swith,
  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.

Library
-------

- Issue #13248: Remove obsolete argument "version" of argparse.ArgumentParser.

- Issue #14814: implement more consistent ordering and sorting behaviour
  for ipaddress objects

- Issue #14814: ipaddress network objects correctly return NotImplemented
  when compared to arbitrary objects instead of raising TypeError

- Issue #14990: Correctly fail with SyntaxError on invalid encoding
  declaration.

- Issue #14814: ipaddress now provides more informative error messages when
  constructing instances directly (changes permitted during beta due to
  provisional API status)

- Issue #15247: FileIO now raises an error when given a file descriptor
  pointing to a directory.

- Issue #15261: Stop os.stat(fd) crashing on Windows when fd not open.

- Issue #15166: Implement imp.get_tag() using sys.implementation.cache_tag.

- Issue #15210: Catch KeyError when imprortlib.__init__ can't find
  _frozen_importlib in sys.modules, not ImportError.

- Issue #15030: importlib.abc.PyPycLoader now supports the new source size
  header field in .pyc files.

- Issue #5346: Preserve permissions of mbox, MMDF and Babyl mailbox
  files on flush().

- Issue #10571: Fix the "--sign" option of distutils' upload command.
  Patch by Jakub Wilk.

- Issue #9559: If messages were only added, a new file is no longer
  created and renamed over the old file when flush() is called on an
  mbox, MMDF or Babyl mailbox.

- Issue 10924: Fixed mksalt() to use a RNG that is suitable for cryptographic
  purpose.

Extension Modules
-----------------

- Issue #15194: Update libffi to the 3.0.11 release.

Tools/Demos
-----------
